[package]
name = "r-fast-copy"
version = "0.1.1"
edition = "2021"
authors = ["ritonelion@outlook.com"]
description = "Multithreads copy tool."
default-run = "r-fast-copy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#futures = "0.3"
rand="0.8"
clap={ version = "3", features = ["derive"]}